--- a/ImageViewer/appsettings.json
+++ b/ImageViewer/appsettings.json
@@ -20,6 +20,8 @@
         "SplashScreenPath": "splash.html",
         "Window": {
             "Title": "Image Viewer",
+            "Fullscreen": true,
+            "Borderless": true,
             "Maximized": true
         }
     },
