--- a/ImageViewer/ImageViewer.csproj
+++ b/ImageViewer/ImageViewer.csproj
@@ -24,7 +24,7 @@
         <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
     </PropertyGroup>
     <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Linux'))">
-        <TargetFramework>net7.0-linux</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <DefineConstants>$(DefineConstants);LINUX</DefineConstants>
     </PropertyGroup>
 
