--- a/Gurt/appsettings.json
+++ b/Gurt/appsettings.json
@@ -19,7 +19,7 @@
   "AppShell": {
     "SplashScreenPath": "splash.html",
     "Window": {
-      "Title": "Image Viewer",
+      "Title": "Gurt",
       "Fullscreen": true,
       "Borderless": true,
       "Maximized": true
