--- a/Gurt/appsettings.json
+++ b/Gurt/appsettings.json
@@ -20,9 +20,11 @@
     "SplashScreenPath": "splash.html",
     "Window": {
       "Title": "Gurt",
-      "Fullscreen": true,
       "Borderless": true,
-      "Maximized": true
+      "Size": {
+        "Width": 1920,
+        "Height": 1080
+      }
     }
   },
   "Logging": {
