--- a/Gurt/appsettings.json
+++ b/Gurt/appsettings.json
@@ -21,10 +21,7 @@
     "Window": {
       "Title": "Gurt",
       "Borderless": true,
-      "Size": {
-        "Width": 1920,
-        "Height": 1080
-      }
+      "Fullscreen": true
     }
   },
   "Logging": {
