--- a/Gurt/package.json
+++ b/Gurt/package.json
@@ -48,6 +48,7 @@
     "@juniper-lib/widgets": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/widgets",
     "@juniper-lib/workers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/workers",
     "gl-matrix": "3.4.3",
+    "simplex-noise": "^4.0.1",
     "three": "0.150.1",
     "typescript": "5.2.2"
   }
