windows also needs "maximized"

--- a/Gurt/appsettings.json
+++ b/Gurt/appsettings.json
@@ -21,6 +21,7 @@
     "Window": {
       "Title": "Gurt",
       "Borderless": true,
+      "Maximized":  true,
       "Fullscreen": true
     }
   },
