--- a/Gurt/tsconfig.json
+++ b/Gurt/tsconfig.json
@@ -41,9 +41,9 @@
 
     "compilerOptions": {
         "composite": true,
-        "lib": [ "ES2021", "DOM", "WebWorker", "DOM.Iterable" ],
-        "target": "ES2021",
-        "module": "ES2020",
+        "lib": [ "ESNext", "DOM", "WebWorker", "DOM.Iterable" ],
+        "target": "ESNext",
+        "module": "ESNext",
         "moduleResolution": "Node",
 
         "declaration": true,
@@ -86,7 +86,8 @@
 
         "typeRoots": [
             "./node_modules/@types",
-            "./node_modules/@juniper-types"
+            "./node_modules/@juniper-types",
+            "./node_modules/@webgpu/types"
         ]
     }
 }
