--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
                 "ASPNETCORE_ENVIRONMENT": "Development"
             },
             "program": "./Gurt.dll",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build Gurt",
             "postDebugTask": "Terminate All Tasks"
         },
         {
@@ -28,7 +28,35 @@
             "args": [
                 "--no-appshell"
             ],
-            "preLaunchTask": "build",
+            "preLaunchTask": "build Gurt",
+            "postDebugTask": "Terminate All Tasks",
+            "console": "internalConsole",
+            "serverReadyAction": {
+                "pattern": "\\brunning at address (https?://\\S+)",
+                "action": "debugWithChrome",
+                "killOnServerStop": true
+            },
+            "launchBrowser": {
+                "enabled": true,
+                "linux": {
+                    "command": "xdg-open",
+                    "args": "${auto-detect-url} --enable-unsafe-webgpu --enable-features=Vulkan"
+                }
+            }
+        },
+        {
+            "name": "C#: seanmcbeth.com (Browser)",
+            "type": "coreclr",
+            "request": "launch",
+            "cwd": "${workspaceFolder}/seanmcbeth.com/bin/Debug/net8.0",
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "program": "./SeanMcBeth.Site.dll",
+            "args": [
+                "--no-appshell"
+            ],
+            "preLaunchTask": "build seanmcbeth.com",
             "postDebugTask": "Terminate All Tasks",
             "console": "internalConsole",
             "serverReadyAction": {
