--- a/Yarrow/Yarrow/tsconfig.json
+++ b/Yarrow/Yarrow/tsconfig.json
@@ -54,6 +54,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
 
+    "strict": true,
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictNullChecks": false,
