--- a/Gurt/Gurt.csproj
+++ b/Gurt/Gurt.csproj
@@ -7,6 +7,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <ApplicationIcon>foxglove.ico</ApplicationIcon>
         <Platforms>AnyCPU;x64</Platforms>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)'=='Debug'">
