--- a/seanmcbeth.com/tsconfig.json
+++ b/seanmcbeth.com/tsconfig.json
@@ -31,6 +31,7 @@
         "downlevelIteration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
         "importHelpers": true,
         "incremental": true,
         "removeComments": false,
@@ -59,6 +60,7 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
 
+        "strict": true,
         "strictBindCallApply": true,
         "strictFunctionTypes": true,
         "strictNullChecks": false,
