update media types

--- a/seanmcbeth.com/appsettings.json
+++ b/seanmcbeth.com/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Version": "2.0.10",
+  "Version": "2.1.0",
   "AllowedHosts": "*",
   "Kestrel": {
     "Endpoints": {
@@ -19,7 +19,8 @@
     ".glb": "model/gltf-binary",
     ".gltf": "model/gltf-json",
     ".vtt": "text/vtt",
-    ".webmanifest": "application/manifest+json"
+    ".webmanifest": "application/manifest+json",
+    ".wgsl": "text/wgsl"
   },
   "DefaultFiles": [
     "index.html"
