GPU FDGR progress

--- a/seanmcbeth.com/package.json
+++ b/seanmcbeth.com/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.10",
+  "version": "2.1.0",
   "name": "seanmcbeth-com",
   "private": true,
   "type": "module",
@@ -23,13 +23,12 @@
     "@types/web-bluetooth": "0.0.17",
     "@types/webxr": "0.5.4",
     "@types/wicg-file-system-access": "2020.9.6",
+    "@webgpu/types": "0.1.40",
     "esbuild": "0.19.2",
     "esbuild-plugin-glsl": "1.2.1",
     "tslib": "2.6.2"
   },
   "dependencies": {
-    "@babylonjs/core": "5.57.1",
-    "@babylonjs/loaders": "5.57.1",
     "@juniper-lib/audio": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/audio",
     "@juniper-lib/collections": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/collections",
     "@juniper-lib/dom": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/dom",
@@ -43,13 +42,14 @@
     "@juniper-lib/speech": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/speech",
     "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tests",
     "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs",
+    "@juniper-lib/timers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/timers",
     "@juniper-lib/tslib": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib",
     "@juniper-lib/video": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/video",
     "@juniper-lib/webgl": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webgl",
     "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc",
     "@juniper-lib/widgets": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/widgets",
     "@juniper-lib/workers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/workers",
-    "gl-matrix": "3.4.3",
+    "gl-matrix": "4.0.0-beta.1",
     "pdfjs-dist": "2.16.105",
     "primrose": "file:../Primrose/Primrose.TypeScript",
     "three": "0.150.1",
