--- a/Gurt/appsettings.json
+++ b/Gurt/appsettings.json
@@ -22,7 +22,7 @@
       "Title": "Gurt",
       "Borderless": true,
       "Maximized": true,
-      "Fullscreen": true
+      "Fullscreen": false 
     }
   },
   "Logging": {
