--- a/seanmcbeth.com/seanmcbeth.com.csproj
+++ b/seanmcbeth.com/seanmcbeth.com.csproj
@@ -1,44 +1,52 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<RuntimeIdentifiers>win-x86;win-x64;linux-x64;osx-x64;osx-arm64</RuntimeIdentifiers>
-		<RootNamespace>SeanMcBeth</RootNamespace>
-		<AssemblyName>SeanMcBeth.Site</AssemblyName>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
-		<Nullable>enable</Nullable>
-		<UserSecretsId>a3da341e-81da-4b01-b99e-ac92445d82fd</UserSecretsId>
-		<Platforms>AnyCPU;x64</Platforms>
-		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <RuntimeIdentifiers>win-x86;win-x64;linux-x64;osx-x64;osx-arm64</RuntimeIdentifiers>
+        <RootNamespace>SeanMcBeth</RootNamespace>
+        <AssemblyName>SeanMcBeth.Site</AssemblyName>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+        <Nullable>enable</Nullable>
+        <UserSecretsId>a3da341e-81da-4b01-b99e-ac92445d82fd</UserSecretsId>
+        <Platforms>AnyCPU;x64</Platforms>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
-		<DebugType>portable</DebugType>
-	</PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+        <DebugType>portable</DebugType>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)'=='Release'">
-		<DebugType>none</DebugType>
-	</PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)'=='Release'">
+        <DebugType>none</DebugType>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<None Include="..\.editorconfig" Link=".editorconfig" />
-	</ItemGroup>
+    <ItemGroup Condition="Exists('DB.db')">
+      <None Remove="DB.db" />
+      <Content Include="DB.db">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Betalgo.OpenAI" Version="7.4.5" />
-		<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.1" />
-		<PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
-		<ProjectReference Include="..\Juniper\src\Juniper.Azure\Juniper.Azure.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.GoogleMaps\Juniper.GoogleMaps.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.Logic\Juniper.Logic.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.OpenAI\Juniper.OpenAI.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.Root\Juniper.Root.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.Server\Juniper.Server.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.Sound\Juniper.Sound.csproj" />
-		<ProjectReference Include="..\Juniper\src\Juniper.TSBuild\Juniper.TSBuild.csproj" />
-	</ItemGroup>
+    <ItemGroup>
+        <None Include="..\.editorconfig" Link=".editorconfig" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Betalgo.OpenAI" Version="7.4.5" />
+        <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="8.0.0" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+        <ProjectReference Include="..\Juniper\src\Juniper.Azure\Juniper.Azure.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.Data.Sqlite\Juniper.Data.Sqlite.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.GoogleMaps\Juniper.GoogleMaps.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.Logic\Juniper.Logic.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.OpenAI\Juniper.OpenAI.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.Root\Juniper.Root.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.Server\Juniper.Server.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.Sound\Juniper.Sound.csproj" />
+        <ProjectReference Include="..\Juniper\src\Juniper.TSBuild\Juniper.TSBuild.csproj" />
+    </ItemGroup>
 
 </Project>
