--- a/seanmcbeth.com/package.json
+++ b/seanmcbeth.com/package.json
@@ -18,7 +18,7 @@
     "@juniper-types/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/indexdb",
     "@types/dom-chromium-installation-events": "101.0.0",
     "@types/dom-mediacapture-record": "1.0.16",
-    "@types/offscreencanvas": "2019.7.0",
+    "@types/offscreencanvas": "2019.7.3",
     "@types/three": "0.150.2",
     "@types/web-bluetooth": "0.0.17",
     "@types/webxr": "0.5.4",
@@ -42,10 +42,12 @@
     "@juniper-lib/speech": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/speech",
     "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tests",
     "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs",
+    "@juniper-lib/three-dee": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/three-dee",
     "@juniper-lib/timers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/timers",
     "@juniper-lib/tslib": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib",
     "@juniper-lib/video": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/video",
     "@juniper-lib/webgl": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webgl",
+    "@juniper-lib/webgpu": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webgpu",
     "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc",
     "@juniper-lib/widgets": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/widgets",
     "@juniper-lib/workers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/workers",
