--- a/Gurt/tsconfig.json
+++ b/Gurt/tsconfig.json
@@ -32,8 +32,10 @@
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/speech" },
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/tests" },
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs" },
+        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/three-dee" },
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib" },
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/webgl" },
+        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/webgpu" },
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc" },
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/widgets" },
         { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/workers" },
@@ -51,6 +53,7 @@
         "downlevelIteration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "forceConsistentCasingInFileNames": true,
         "importHelpers": true,
         "incremental": true,
         "removeComments": false,
