--- a/seanmcbeth.com/seanmcbeth.com.csproj
+++ b/seanmcbeth.com/seanmcbeth.com.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -22,10 +22,10 @@
     </PropertyGroup>
 
     <ItemGroup Condition="Exists('DB.db')">
-      <None Remove="DB.db" />
-      <Content Include="DB.db">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+        <None Remove="DB.db" />
+        <Content Include="DB.db">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
