--- a/seanmcbeth.com/package.json
+++ b/seanmcbeth.com/package.json
@@ -11,11 +11,11 @@
     "juniper-watch": "npm run watch"
   },
   "devDependencies": {
-    "@juniper-lib/esbuild": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/esbuild",
-    "@juniper-lib/testing": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/testing",
-    "@juniper-types/dom-types": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/dom-types",
-    "@juniper-types/extra-types": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/extra-types",
-    "@juniper-types/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-types/indexdb",
+    "@juniper-lib/esbuild": "file:../Juniper/JS/esbuild",
+    "@juniper-lib/testing": "file:../Juniper/JS/testing",
+    "@juniper-types/dom-types": "file:../Juniper/JS/types/dom-types",
+    "@juniper-types/extra-types": "file:../Juniper/JS/types/extra-types",
+    "@juniper-types/indexdb": "file:../Juniper/JS/types/indexdb",
     "@types/dom-chromium-installation-events": "101.0.0",
     "@types/dom-mediacapture-record": "1.0.16",
     "@types/offscreencanvas": "2019.7.3",
@@ -29,28 +29,28 @@
     "tslib": "2.6.2"
   },
   "dependencies": {
-    "@juniper-lib/audio": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/audio",
-    "@juniper-lib/collections": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/collections",
-    "@juniper-lib/dom": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/dom",
-    "@juniper-lib/emoji": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/emoji",
-    "@juniper-lib/events": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/events",
-    "@juniper-lib/fetcher": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher",
-    "@juniper-lib/graphics2d": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/graphics2d",
-    "@juniper-lib/indexdb": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/indexdb",
-    "@juniper-lib/mediatypes": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/mediatypes",
-    "@juniper-lib/progress": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/progress",
-    "@juniper-lib/speech": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/speech",
-    "@juniper-lib/tests": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tests",
-    "@juniper-lib/threejs": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs",
-    "@juniper-lib/three-dee": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/three-dee",
-    "@juniper-lib/timers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/timers",
-    "@juniper-lib/tslib": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib",
-    "@juniper-lib/video": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/video",
-    "@juniper-lib/webgl": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webgl",
-    "@juniper-lib/webgpu": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webgpu",
-    "@juniper-lib/webrtc": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc",
-    "@juniper-lib/widgets": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/widgets",
-    "@juniper-lib/workers": "file:../Juniper/src/Juniper.TypeScript/@juniper-lib/workers",
+    "@juniper-lib/audio": "file:../Juniper/JS/audio",
+    "@juniper-lib/collections": "file:../Juniper/JS/collections",
+    "@juniper-lib/dom": "file:../Juniper/JS/dom",
+    "@juniper-lib/emoji": "file:../Juniper/JS/emoji",
+    "@juniper-lib/events": "file:../Juniper/JS/events",
+    "@juniper-lib/fetcher": "file:../Juniper/JS/fetcher",
+    "@juniper-lib/graphics2d": "file:../Juniper/JS/graphics2d",
+    "@juniper-lib/indexdb": "file:../Juniper/JS/indexdb",
+    "@juniper-lib/mediatypes": "file:../Juniper/JS/mediatypes",
+    "@juniper-lib/progress": "file:../Juniper/JS/progress",
+    "@juniper-lib/speech": "file:../Juniper/JS/speech",
+    "@juniper-lib/tests": "file:../Juniper/JS/tests",
+    "@juniper-lib/threejs": "file:../Juniper/JS/threejs",
+    "@juniper-lib/three-dee": "file:../Juniper/JS/three-dee",
+    "@juniper-lib/timers": "file:../Juniper/JS/timers",
+    "@juniper-lib/tslib": "file:../Juniper/JS/tslib",
+    "@juniper-lib/video": "file:../Juniper/JS/video",
+    "@juniper-lib/webgl": "file:../Juniper/JS/webgl",
+    "@juniper-lib/webgpu": "file:../Juniper/JS/webgpu",
+    "@juniper-lib/webrtc": "file:../Juniper/JS/webrtc",
+    "@juniper-lib/widgets": "file:../Juniper/JS/widgets",
+    "@juniper-lib/workers": "file:../Juniper/JS/workers",
     "gl-matrix": "4.0.0-beta.1",
     "pdfjs-dist": "2.16.105",
     "primrose": "file:../Primrose/Primrose.TypeScript",
