--- a/Gurt/tsconfig.json
+++ b/Gurt/tsconfig.json
@@ -17,28 +17,27 @@
     "compileOnSave": true,
 
     "references": [
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/appshell" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/audio" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/collections" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/dom" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/emoji" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/esbuild" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/events" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/fetcher" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/graphics2d" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/indexdb" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/mediatypes" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/progress" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/speech" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/tests" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/threejs" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/three-dee" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/tslib" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/webgl" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/webgpu" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/webrtc" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/widgets" },
-        { "path": "../Juniper/src/Juniper.TypeScript/@juniper-lib/workers" },
+        { "path": "../Juniper/JS/appshell" },
+        { "path": "../Juniper/JS/audio" },
+        { "path": "../Juniper/JS/collections" },
+        { "path": "../Juniper/JS/dom" },
+        { "path": "../Juniper/JS/emoji" },
+        { "path": "../Juniper/JS/esbuild" },
+        { "path": "../Juniper/JS/events" },
+        { "path": "../Juniper/JS/fetcher" },
+        { "path": "../Juniper/JS/graphics2d" },
+        { "path": "../Juniper/JS/indexdb" },
+        { "path": "../Juniper/JS/mediatypes" },
+        { "path": "../Juniper/JS/progress" },
+        { "path": "../Juniper/JS/speech" },
+        { "path": "../Juniper/JS/threejs" },
+        { "path": "../Juniper/JS/three-dee" },
+        { "path": "../Juniper/JS/util" },
+        { "path": "../Juniper/JS/webgl" },
+        { "path": "../Juniper/JS/webgpu" },
+        { "path": "../Juniper/JS/webrtc" },
+        { "path": "../Juniper/JS/widgets" },
+        { "path": "../Juniper/JS/workers" },
     ],
 
     "compilerOptions": {
